--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container d-sm-flex justify-content-between">
           <a class="navbar-brand" href="#">Navbar</a>
-          <form class="d-flex" role="search">
+          <form class="d-flex form-mobile" role="search">
             <input
               class="form-control me-2"
               type="search"
@@ -48,7 +48,7 @@
             id="navbarSupportedContent"
           >
             <ul
-              class="navbar-nav me-auto mb-2 mb-lg-0 d-lg-flex justify-content-center align-items-end"
+              class="navbar-nav mb-2 mb-lg-0 d-lg-flex justify-content-center align-items-end"
             >
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -167,23 +167,33 @@
           class="menu__list d-flex flex-row justify-content-between align-items-center"
         >
           <li>
-            <a href=""><img src="./img/ofertas.png" alt="" /></a>
+            <a class="d-flex align-items-center justify-content-center" href=""
+              ><img src="./img/ofertas.png" alt=""
+            /></a>
             <p>Ofertas</p>
           </li>
           <li>
-            <a href=""><img src="./img/productos.png" alt="" /></a>
+            <a class="d-flex align-items-center justify-content-center" href=""
+              ><img src="./img/productos.png" alt=""
+            /></a>
             <p>Ofertas</p>
           </li>
           <li>
-            <a href=""><img src="./img/gift.png" alt="" /></a>
+            <a class="d-flex align-items-center justify-content-center" href=""
+              ><img src="./img/gift.png" alt=""
+            /></a>
             <p>Ofertas</p>
           </li>
           <li>
-            <a href=""><img src="./img/envios.png" alt="" /></a>
+            <a class="d-flex align-items-center justify-content-center" href=""
+              ><img src="./img/envios.png" alt=""
+            /></a>
             <p>Ofertas</p>
           </li>
           <li>
-            <a href=""><img src="./img/tienda.png" alt="" /></a>
+            <a class="d-flex align-items-center justify-content-center" href=""
+              ><img src="./img/tienda.png" alt=""
+            /></a>
             <p>Ofertas</p>
           </li>
         </ul>
@@ -195,7 +205,7 @@
         </div>
         <article class="ofertas__articulo">
           <img src="./img/tvled.webp" alt="" />
-          <div>
+          <div class="mt-1">
             <p class="ofertas__articulo-descripcion">
               Smart TV Phillips 6900 series led Android 4"
               dfgtssadldfkjabflhbhkfbherfbehfbherfb
@@ -207,7 +217,7 @@
         <hr />
         <article class="ofertas__articulo">
           <img src="./img/tvled.webp" alt="" />
-          <div>
+          <div class="mt-3">
             <p class="ofertas__articulo-descripcion">
               Smart TV Phillips 6900 series led Android
             </p>
@@ -218,7 +228,7 @@
         <hr />
         <article class="ofertas__articulo">
           <img src="./img/tvled.webp" alt="" />
-          <div>
+          <div class="mt-3">
             <p class="ofertas__articulo-descripcion">
               Smart TV Phillips 6900 series led Android
             </p>
@@ -229,7 +239,7 @@
         <hr />
         <article class="ofertas__articulo">
           <img src="./img/tvled.webp" alt="" />
-          <div>
+          <div class="mt-3">
             <p class="ofertas__articulo-descripcion">
               Smart TV Phillips 6900 series led Android
             </p>
@@ -283,6 +293,91 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <section class="my-4 bg-white rounded">
+        <article
+          class="gift d-flex justify-content-between align-items-center rounded-top"
+        >
+          <h4>Obtené tu <br />Gift Card</h4>
+          <div class="gift__price-container">
+            <p class="gift__price-desc m-0 pe-2">Desde</p>
+            <p class="gift__price m-0 pe-2">$5000</p>
+          </div>
+        </article>
+        <article class="p-3">
+          <h5>Regalale cédito disponible a quien vos quieras</h5>
+          <div>
+            <div>
+              <img src="" alt="" />
+              <p>Lorem ipsum dolor sit amet consectetur</p>
+            </div>
+            <div>
+              <img src="" alt="" />
+              <p>Lorem ipsum dolor sit amet consectetur</p>
+            </div>
+            <div>
+              <img src="" alt="" />
+              <p>Lorem ipsum dolor sit amet consectetur</p>
+            </div>
+          </div>
+        </article>
+        <hr />
+        <a href="" class="btn-ingresar"
+          >Obtenela <i class="bi bi-arrow-right-short"></i
+        ></a>
+      </section>
+      <section>
+        <h2>Categorías</h2>
+        <div class="categorias">
+          <article
+            class="categorias__articulo d-flex flex-column justify-content-center"
+          >
+            <a href="" class="d-flex flex-column align-items-center"
+              ><img src="./img/panal.png" alt="" />
+              <p>Pañales</p></a
+            >
+          </article>
+          <article
+            class="categorias__articulo d-flex flex-column justify-content-center"
+          >
+            <a href="" class="d-flex flex-column align-items-center"
+              ><img src="./img/hogar.png" alt="" />
+              <p>Hogar</p></a
+            >
+          </article>
+          <article
+            class="categorias__articulo d-flex flex-column justify-content-center"
+          >
+            <a href="" class="d-flex flex-column align-items-center"
+              ><img src="./img/lactancia.png" alt="" />
+              <p>Cuidado Maternal</p></a
+            >
+          </article>
+          <article
+            class="categorias__articulo d-flex flex-column justify-content-center"
+          >
+            <a href="" class="d-flex flex-column align-items-center"
+              ><img src="./img/comida.png" alt="" />
+              <p>Hora de comer</p></a
+            >
+          </article>
+          <article
+            class="categorias__articulo d-flex flex-column justify-content-center"
+          >
+            <a href="" class="d-flex flex-column align-items-center"
+              ><img src="./img/accesorio.png" alt="" />
+              <p>Accesorios</p></a
+            >
+          </article>
+          <article
+            class="categorias__articulo d-flex flex-column justify-content-center"
+          >
+            <a href="" class="d-flex flex-column align-items-center"
+              ><img src="./img/higiene.png" alt="" />
+              <p>Higiene y perfumería</p></a
+            >
+          </article>
+        </div>
+      </section>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
