--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-light">
+      <nav class="navbar navbar-expand-lg">
         <div class="container d-sm-flex justify-content-between">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#"
+            ><img src="./img/logo.png" alt=""
+          /></a>
           <form class="d-flex form-mobile" role="search">
             <input
               class="form-control me-2"
               type="search"
-              placeholder="Search"
+              placeholder="Buscar"
               aria-label="Search"
             />
             <button class="btn-busqueda" type="submit">
@@ -156,8 +158,8 @@
       <section>
         <article class="envios">
           <p>
-            <i class="bi bi-truck text-success"></i>
-            <span class="text-success">Envíos gratis </span> a partir de $10.000
+            <i class="bi bi-truck text-primary"></i>
+            <span class="text-primary">Envíos gratis </span> a partir de $10.000
             de compra
           </p>
         </article>
@@ -176,25 +178,25 @@
             <a class="d-flex align-items-center justify-content-center" href=""
               ><img src="./img/productos.png" alt=""
             /></a>
-            <p>Ofertas</p>
+            <p>Productos</p>
           </li>
           <li>
             <a class="d-flex align-items-center justify-content-center" href=""
               ><img src="./img/gift.png" alt=""
             /></a>
-            <p>Ofertas</p>
+            <p>Gift</p>
           </li>
           <li>
             <a class="d-flex align-items-center justify-content-center" href=""
               ><img src="./img/envios.png" alt=""
             /></a>
-            <p>Ofertas</p>
+            <p>Envíos</p>
           </li>
           <li>
             <a class="d-flex align-items-center justify-content-center" href=""
               ><img src="./img/tienda.png" alt=""
             /></a>
-            <p>Ofertas</p>
+            <p>Carrito</p>
           </li>
         </ul>
       </section>
@@ -207,10 +209,9 @@
           <img src="./img/tvled.webp" alt="" />
           <div class="mt-1">
             <p class="ofertas__articulo-descripcion">
-              Smart TV Phillips 6900 series led Android 4"
-              dfgtssadldfkjabflhbhkfbherfbehfbherfb
+              Pampers baby dry - centro absorvente ultra rápido
             </p>
-            <p class="ofertas__articulo-precio">$109.999</p>
+            <p class="ofertas__articulo-precio">$5400</p>
             <p class="ofertas__articulo-desc">16% off</p>
           </div>
         </article>
