--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
   </head>
@@ -23,17 +29,7 @@
           <a class="navbar-brand" href="#"
             ><img src="./img/logo.png" alt=""
           /></a>
-          <form class="d-flex form-mobile" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Buscar"
-              aria-label="Search"
-            />
-            <button class="btn-busqueda" type="submit">
-              <i class="bi bi-search"></i>
-            </button>
-          </form>
+
           <button
             class="navbar-toggler"
             type="button"
@@ -50,13 +46,17 @@
             id="navbarSupportedContent"
           >
             <ul
-              class="navbar-nav mb-2 mb-lg-0 d-lg-flex justify-content-center align-items-end"
+              class="navbar-nav mb-2 mb-lg-0 d-lg-flex justify-content-center align-items-start pt-4"
             >
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#"
+                  ><i class="bi bi-house"></i> Inicio</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#"
+                  ><i class="bi bi-tag"></i> Ofertas</a
+                >
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -65,8 +65,8 @@
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
-                >
-                  Dropdown
+                  ><i class="bi bi-bag"></i>
+                  Productos
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Action</a></li>
@@ -78,7 +78,24 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link" href="#"
+                  ><i class="bi bi-gift"></i> Gift Card</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                  ><i class="bi bi-truck"></i> Envíos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  data-bs-toggle="offcanvas"
+                  href="#offcanvasExample"
+                  role="button"
+                  aria-controls="offcanvasExample"
+                  ><i class="bi bi-cart-check"></i> Carrito</a
+                >
               </li>
             </ul>
             <form class="d-flex form-pc" role="search">
@@ -94,6 +111,17 @@
             </form>
           </div>
         </div>
+        <form class="d-flex form-mobile" role="search">
+          <input
+            class="form-control me-2 form-mobile__input"
+            type="search"
+            placeholder="Buscar"
+            aria-label="Search"
+          />
+          <button class="btn-busqueda" type="submit">
+            <i class="bi bi-search"></i>
+          </button>
+        </form>
       </nav>
     </header>
     <main class="container bg-light">
@@ -175,7 +203,9 @@
             <p>Ofertas</p>
           </li>
           <li>
-            <a class="d-flex align-items-center justify-content-center" href=""
+            <a
+              class="d-flex align-items-center justify-content-center"
+              href="./pages/productos.html"
               ><img src="./img/productos.png" alt=""
             /></a>
             <p>Productos</p>
@@ -193,9 +223,39 @@
             <p>Envíos</p>
           </li>
           <li>
-            <a class="d-flex align-items-center justify-content-center" href=""
-              ><img src="./img/tienda.png" alt=""
-            /></a>
+            <a
+              class="d-flex align-items-center justify-content-center"
+              data-bs-toggle="offcanvas"
+              href="#offcanvasExample"
+              role="button"
+              aria-controls="offcanvasExample"
+            >
+              <img src="./img/tienda.png" alt="" />
+            </a>
+
+            <div
+              class="offcanvas offcanvas-start"
+              tabindex="-1"
+              id="offcanvasExample"
+              aria-labelledby="offcanvasExampleLabel"
+            >
+              <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasExampleLabel">
+                  Carrito de compras
+                </h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="offcanvas"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="offcanvas-body"></div>
+            </div>
+            <a
+              class="d-flex align-items-center justify-content-center"
+              href=""
+            ></a>
             <p>Carrito</p>
           </li>
         </ul>
@@ -213,6 +273,7 @@
             </p>
             <p class="ofertas__articulo-precio">$5400</p>
             <p class="ofertas__articulo-desc">16% off</p>
+            <button onclick="agregarAlCarrito(this)">Agregar al Carrito</button>
           </div>
         </article>
         <hr />
@@ -224,6 +285,9 @@
             </p>
             <p class="ofertas__articulo-precio">$109.999</p>
             <p class="ofertas__articulo-desc">16% off</p>
+            <button class="btn btn-primary" onclick="agregarAlCarrito(this)">
+              Añadir al carrito
+            </button>
           </div>
         </article>
         <hr />
@@ -380,6 +444,27 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="slogan">
+        <img src="./img/logo.png" alt="" />
+        <p>¡La pañalera en casa!</p>
+      </div>
+      <ul class="d-flex justify-content-around ps-0 pt-4">
+        <div>
+          <li>Inicio</li>
+          <li>Productos</li>
+          <li>Gift Card</li>
+          <li>Envíos</li>
+          <li>Carrito</li>
+        </div>
+        <div>
+          <li><i class="bi bi-instagram"></i> Instagram</li>
+          <li><i class="bi bi-facebook"></i> Facebook</li>
+          <li><i class="bi bi-tiktok"></i> Tik Tok</li>
+          <li><i class="bi bi-whatsapp"></i> Whatsapp</li>
+        </div>
+      </ul>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
