se trabajo en el codigo js para unificar los html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
     <section class="menu">
       <ul class="menu__list">
         <li>
-          <a class="d-flex align-items-center justify-content-center" href=""><img src="./img/ofertas.png" alt="" /></a>
+          <a class="d-flex align-items-center justify-content-center" href="productos.html"><img src="./img/ofertas.png"
+              alt="" /></a>
           <p>Ofertas</p>
         </li>
         <li>
@@ -169,13 +170,10 @@
       </ul>
     </section>
     <section class="ofertas bg-white">
-      <div class="ofertas__titulo">
-        <h2>Ofertas</h2>
-        <hr />
-      </div>
       <div class="ofertas__contenedor">
 
       </div>
+
 
       <a href="" class="btn-ingresar">Ver todas <i class="bi bi-arrow-right-short"></i></a>
     </section>
