--- a/productos.html
+++ b/productos.html
@@ -20,7 +20,7 @@
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid d-sm-flex justify-content-between">
-        <a class="navbar-brand" href="#"><img src="../img/logo.png" alt="" /></a>
+        <a class="navbar-brand" href="index.html"><img src="../img/logo.png" alt="" /></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,6 +86,15 @@
     </nav>
   </header>
   <main>
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasExampleLabel">
+          Carrito de compras
+        </h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body"></div>
+    </div>
     <section class="menu">
       <ul class="menu__list menu__list-productos">
         <li>
@@ -135,7 +144,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-  <script src="./index.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
