--- a/productos.html
+++ b/productos.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="sweetalert2.min.css">
   <link rel="stylesheet" href="./css/styles.css" />
   <title>Document</title>
 </head>
@@ -20,7 +21,7 @@
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid d-sm-flex justify-content-between">
-        <a class="navbar-brand" href="index.html"><img src="../img/logo.png" alt="" /></a>
+        <a class="navbar-brand" href="index.html"><img src="./img/logo.png" alt="" /></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +30,7 @@
         <div class="collapse navbar-collapse justify-content-around" id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mb-lg-0 d-lg-flex justify-content- align-items-start pt-4">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">
+              <a class="nav-link active" aria-current="page" href="./index.html">
                 Inicio</a>
             </li>
             <li class="nav-item">
@@ -94,6 +95,38 @@
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body"></div>
+
+      <div id="formulario-compra" style="display: none;">
+        <h3 class="ms-1">Información de Pago</h3>
+        <form id="formulario">
+          <div class="mb-3 ms-1">
+            <label for="nombre" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="nombre" required>
+          </div>
+          <div class="mb-3 ms-1">
+            <label for="direccion" class="form-label">Dirección</label>
+            <input type="text" class="form-control" id="direccion" required>
+          </div>
+          <div class="mb-3 ms-1">
+            <label for="email" class="form-label">Correo Electrónico</label>
+            <input type="email" class="form-control" id="email" required>
+          </div>
+          <div class="mb-3 ms-1">
+            <label for="telefono" class="form-label">Teléfono</label>
+            <input type="tel" class="form-control" id="telefono" required>
+          </div>
+          <div class="mb-3 ms-1">
+            <label for="opciones-pago" class="form-label">Opciones de Pago</label>
+            <select class="form-select" id="opciones-pago" required>
+              <option value="contra-reembolso">Contra Reembolso</option>
+              <option value="tarjeta-debito">Tarjeta de Débito</option>
+              <option value="tarjeta-credito">Tarjeta de Crédito</option>
+            </select>
+          </div>
+          <button type="button" class="btn btn-primary ms-1" onclick="realizarCompra()">Realizar Compra</button>
+        </form>
+      </div>
+
     </div>
     <section class="menu">
       <ul class="menu__list menu__list-productos">
@@ -140,7 +173,9 @@
       </ul>
     </section>
     <div class="ofertas__contenedor"></div>
+
   </main>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
